--- a/css/blocks/Main/dropdown.css
+++ b/css/blocks/Main/dropdown.css
@@ -1,4 +1,3 @@
-
 .header-dropdown {
     position: relative;
     cursor: pointer;
@@ -14,14 +13,21 @@
 
 .header-dropdown__triangle {
     position: absolute;
+    width: 100px;
+    right: 0;
+    height: 10px;
+    display: none;
+}
+
+.header-dropdown__triangle-elem {
+    position: absolute;
     border: 10px solid transparent;
     width: 0px;
     height: 0px;
     right: 23px;
-    top: 6px;
+    top: -12px;
     opacity: 0.8;
     border-bottom-color: #EDEDED;
-    display: none;
 }
 
 .header-dropdown__menu {
